examples/test/testpolicy2173.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2173
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key26: value22
      key44: value35
      key47: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value21
          key38: value37
      podSelector:
        matchLabels:
          key31: value21
          key18: value39
